# sdk

./: .gitignore  Makefile
inc/: nrf.h  nrf51422.h  nrf52832.h  pca10040.h  system_nrf5x.h
linker/: template.ld
source/: CMakeLists.txt
source/boards/: boards.cmake
source/boards/inc/: pca10040.h
source/common/: common.cmake
source/common/inc/: n_assert.h
source/common/src/: n_assert.c
source/devices/: device.cmake  devices.cmake
source/devices/CMake/: nrf51422.cmake  nrf52832.cmake
source/devices/inc/: nrf51422.h  nrf51422_bitfields.h  nrf51422_peripherals.h  nrf52832.h  nrf52832_bitfields.h  nrf52832_peripherals.h  nrf52840.h  nrf52840_bitfields.h  nrf52840_peripherals.h  nrf5x_startup.h  nrf5x_system.h
source/devices/linker/: template.sct
source/devices/src/: arm_nrf52832_startup.s  gcc_nrf52832_startup.S  nrf52832_startup.c  nrf52832_system.c  nrf5x_startup.c  system_nrf51422.c  system_nrf52832.c
source/devices/templates/: startup_config.h  startup_config.h.in  system_config.h.in
source/drivers/: CMakeLists.txt  drivers.cmake
source/drivers/inc/: n_gpio.h
source/drivers/src/: n_gpio.c
source/examples/: CMakeLists.txt
source/examples/blinky/: CMakeLists.txt  main.c
src/: system_nrf52840.c
